@@ -3,6 +3,7 @@ Change log 1.4 (under development)
 * Added testng to full release project
 * Fixed so that classloader executor supports runnable's
 * DeepCloner now supports reference cloning
+* DeepCloner now supports cloning enum constants
 
 Change log 1.3.5 (2009-12-13)
 -----------------------------
